# python-st3215

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
st3215/: __init__.py  errors.py  group_sync_read.py  group_sync_write.py  port_handler.py  protocol_packet_handler.py  st3215.py  values.py
test/: test_01_ping_servo.py  test_02_list_servos.py  test_03_read_load_voltage_current.py  test_04_read_temperature.py  test_05_read_acceleration.py  test_06_read_mode.py  test_07_read_correction.py  test_08_read_status.py  test_09_is_moving.py  test_10_complete_motion_control.py
